scss: very wide images no longer overflow bounds in upload form for v4

--- a/scss/boost-custom.scss
+++ b/scss/boost-custom.scss
@@ -1,12 +1,3 @@
-// left-align uploaded media/videos
-.mediaplugin {
-    text-align: left;
-
-    > div {
-        margin: inherit;
-    }
-}
-
 // more emphasis on higlighted section
 .current h3.sectionname {
     font-weight: bold;
